@@ -16,8 +16,8 @@
       \item C interface supports \code{dbarts_createStateExpression} and 
             \code{dbarts_initializeState} which can be used to re-create
             samplers that were allocated using forked multithreading.
-      \item C interface also supports \code{dbarts_predict} and
-            \code{dbarts_setControl}.
+      \item C interface also supports \code{dbarts_predict},
+            \code{dbarts_setControl}, and \code{dbarts_printTrees}.
       \item Exports \code{makeTestModelMatrix} to allow package authors to
             create test data at a later point from training data.
     }
@@ -38,6 +38,7 @@
             multiple chains. Report thanks to Noah Greifer.
       \item Fixed potential memory access errors when recreating sample from
             saved state.
+      \item Correctly de-serializes saved tree structure.
     }
   }
 }
